[package]
name = "flow-chat"
version = "2.0.0"
edition = "2021"
description = "Chat interface for Flow language - REPL with C++ compilation"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
